Update Corn_ Disease_ Classification.ipynb

--- a/Corn_ Disease_ Classification.ipynb
+++ b/Corn_ Disease_ Classification.ipynb
@@ -32,7 +32,7 @@
    "id": "6994dc47",
    "metadata": {},
    "source": [
-    "### let's stat by listing our directories"
+    "### let's start by listing our directories"
    ]
   },
   {
