Update Corn_ Disease_ Classification.ipynb

--- a/Corn_ Disease_ Classification.ipynb
+++ b/Corn_ Disease_ Classification.ipynb
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "data_dir=r'/Users/mohsenboughriou/Downloads/archive/BangladeshiCrops/BangladeshiCrops/Crop___Disease/Corn'\n",
+    "data_dir=r'Crop___Disease/Corn'",
     "classes=[class_name for class_name in os.listdir(data_dir) if not class_name.startswith('.')]\n",
     "classes"
    ]
